--------------------------------------------------------------------------------
drkns 02.11.2022 21:24:55 +0000 - build 6043

1. Refactoring, move plarform-specific code around.

2. Refactoring, reorganize error checking.

--------------------------------------------------------------------------------
drkns 29.10.2022 18:00:05 +0100 - build 6042

1. Include PE & file timestamps into generated bug reports.

--------------------------------------------------------------------------------
drkns 15.10.2022 19:27:16 +0100 - build 6041

1. Add workaround for incorrect encoding in OS-generated CF_UNICODETEXT.
   See far:config, ClipboardUnicodeWorkaround.

2. Refactoring.

--------------------------------------------------------------------------------
pepak 13.10.2022 20:18:32 +0100 - build 6040

1. Add special symbols to refer to the left ("![") or to the right ("!]") panel.

--------------------------------------------------------------------------------
drkns 10.10.2022 18:06:05 +0100 - build 6039

1. Use the real window handle when running in Windows Terminal.
   This should fix some scenarios like taskbar progress, flashing, icon setting, Alt+F9 etc.
   It also may or may not break your Terminal, who knows.

--------------------------------------------------------------------------------
drkns 07.10.2022 23:13:59 +0100 - build 6038

1. gh-551: Screen scrambled when pressing Alt-F9 under Windows 11 22H2

--------------------------------------------------------------------------------
drkns 06.10.2022 17:43:00 +0100 - build 6037

1. Fix string replace when pattern and/or replacement are views into the same string.

--------------------------------------------------------------------------------
drkns 05.10.2022 23:47:54 +0100 - build 6036

1. Remove "Colors - Black and white mode".

2. Add "Colors - Set default colors (RGB)" - same as "Set default colors", but fixed RGB values instead of indices.
