@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 03.11.2022 20:43:44 +0000 - build 6044
+
+1. Make "path" in "pushd path" optional.
+
+--------------------------------------------------------------------------------
 drkns 02.11.2022 21:24:55 +0000 - build 6043
 
 1. Refactoring, move plarform-specific code around.
